<resources>
    <string name="app_name">AtrialScanner</string>

    <string name="btn_fingerprint">push_this_for_measurement</string>
    <string name="description_image_heart">heart_image</string>
    <string name="label_default_heart_rate">60</string>
    <string name="label_default_heart_rate_bpm"> bpm</string>
    <string name="label_default_prediction">None</string>
    <string name="label_default_prediction_header"><b>Prediction : </b></string>
    <string name="label_default_guide">Press and hold for 20 seconds</string>
    <string name="label_empty" />
    <string name="toast_keep_device_still">Keep device still</string>
</resources>